# NE_loader_package

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ne_loader/: __init__.py  cacher.py  cli.py  error_handler.py  map_loader.py
tests/: test_cli.py  test_download_ne_data.py  test_error_handler.py  test_map_loader.py
