[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ne-loader"
version = "0.1.0"
description = "A simple loader for Natural Earth map data."
authors = [
    { name = "Eric Tunn", email = "erictunn@icloud.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "geopandas>=0.12",
    "requests>=2.25"
]

[project.urls]
Homepage = "https://github.com/erictunn/ne-loader"

[project.scripts]
ne-loader = "ne_loader.cli:main"
