[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ne-loader"
version = "0.4"
description = "A simple loader for Natural Earth map data."
authors = [
    { name = "Eric Tunn", email = "erictunn@icloud.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.12",
    "platformdirs>=4",
    "requests>=2.25"
    "click>=8"
]

[project.urls]
Homepage = "https://github.com/erictunn/ne-loader"

[project.scripts]
ne-loader = "ne_loader.cli:main"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "D",
]
